@@ -15,6 +15,7 @@ import java.util.Set;
 public class VisualBukkitDoclet implements Doclet {
 
     private Path outputDirectory;
+    private boolean prettyPrint;
     private Reporter reporter;
 
     @Override
@@ -29,7 +30,7 @@ public class VisualBukkitDoclet implements Doclet {
 
     @Override
     public Set<? extends Option> getSupportedOptions() {
-        return Collections.singleton(new OutputDirectoryOption());
+        return Set.of(new OutputDirectoryOption(), new PrettyPrintOption());
     }
 
     @Override
@@ -39,7 +40,7 @@ public class VisualBukkitDoclet implements Doclet {
 
     @Override
     public boolean run(DocletEnvironment environment) {
-        return new JsonGenerator(outputDirectory, reporter).generate(environment);
+        return new JsonGenerator(outputDirectory, prettyPrint, reporter).generate(environment);
     }
 
     private class OutputDirectoryOption implements Doclet.Option {
@@ -72,6 +73,40 @@ public class VisualBukkitDoclet implements Doclet {
         @Override
         public boolean process(String option, List<String> arguments) {
             outputDirectory = Paths.get(arguments.get(0));
+            return true;
+        }
+    }
+
+    private class PrettyPrintOption implements Doclet.Option {
+
+        @Override
+        public int getArgumentCount() {
+            return 0;
+        }
+
+        @Override
+        public String getDescription() {
+            return "print JSON in a human friendly format";
+        }
+
+        @Override
+        public Kind getKind() {
+            return Kind.STANDARD;
+        }
+
+        @Override
+        public List<String> getNames() {
+            return Collections.singletonList("--pretty");
+        }
+
+        @Override
+        public String getParameters() {
+            return null;
+        }
+
+        @Override
+        public boolean process(String option, List<String> arguments) {
+            prettyPrint = true;
             return true;
         }
     }
